--- a/_posts/life/2020/2020-11-17-life.md
+++ b/_posts/life/2020/2020-11-17-life.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "【房东的猫】来访，签名鼠标垫Get~"
+categories: [生活]
 ---
 
 ![](../../../../../../life/imgs/2020/1117/IMG_20201117_160200.jpg) 
