--- a/_posts/life/2020/2020-12-27-life.md
+++ b/_posts/life/2020/2020-12-27-life.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "【脆皮黑芝麻面包】高筋面粉可以这么玩！，味道还行，容易饱腹~ 以后一定要买个大烤箱..."
+categories: [生活]
 ---
 
 ![](/life/imgs/2020/1227/IMG_20201227_120057.jpg)
