--- a/_posts/life/2020/2020-11-21-life.md
+++ b/_posts/life/2020/2020-11-21-life.md
@@ -4,5 +4,5 @@ title: "【蛋壳维权】朕亲临，给个号！"
 categories: [生活]
 ---
 
-![](/life/imgs/2020/1121/wx_camera_1605923986455.jpg)
-![](/life/imgs/2020/1121/IMG_20201121_101047.jpg)
+![wx_camera_1605923986455](https://raw.githubusercontent.com/petterobam/picture-bucket/main/vs-code/upload/imgs/wx_camera_1605923986455.jpg)
+![IMG_20201121_101047](https://raw.githubusercontent.com/petterobam/picture-bucket/main/vs-code/upload/imgs/IMG_20201121_101047.jpg)
