--- a/_posts/life/2020/2020-12-27-life.md
+++ b/_posts/life/2020/2020-12-27-life.md
@@ -4,7 +4,7 @@ title: "【脆皮黑芝麻面包】高筋面粉可以这么玩！，味道还行
 categories: [生活]
 ---
 
-![](/life/imgs/2020/1227/IMG_20201227_120057.jpg)
-![](/life/imgs/2020/1227/IMG_20201227_125337.jpg)
-![](/life/imgs/2020/1227/IMG_20201227_132611.jpg)
-![](/life/imgs/2020/1227/IMG_20201227_134547.jpg)
+![IMG_20201227_120057](https://raw.githubusercontent.com/petterobam/picture-bucket/main/vs-code/upload/imgs/IMG_20201227_120057.jpg)
+![IMG_20201227_125337](https://raw.githubusercontent.com/petterobam/picture-bucket/main/vs-code/upload/imgs/IMG_20201227_125337.jpg)
+![IMG_20201227_132611](https://raw.githubusercontent.com/petterobam/picture-bucket/main/vs-code/upload/imgs/IMG_20201227_132611.jpg)
+![IMG_20201227_134547](https://raw.githubusercontent.com/petterobam/picture-bucket/main/vs-code/upload/imgs/IMG_20201227_134547.jpg)
