--- a/_posts/life/2020/2020-12-28-life.md
+++ b/_posts/life/2020/2020-12-28-life.md
@@ -6,11 +6,11 @@ categories: [生活]
 
 以后改 Bug 不用自己号了，《天外来物》我为啥要连续听 34 遍。..
 
-![](/life/imgs/2020/1228/Screenshot_20211228-223111.jpg)
-![](/life/imgs/2020/1228/Screenshot_20211228-223503.jpg)
-![](/life/imgs/2020/1228/Screenshot_20201228-214832.jpg)
-![](/life/imgs/2020/1228/Screenshot_20201228-214847.jpg)
-![](/life/imgs/2020/1228/Screenshot_20201228-214853.jpg)
-![](/life/imgs/2020/1228/Screenshot_20201228-214900.jpg)
-![](/life/imgs/2020/1228/Screenshot_20211228-223451.jpg)
-![](/life/imgs/2020/1228/Screenshot_20211228-223143.jpg)
+![Screenshot_20211228-223111](https://raw.githubusercontent.com/petterobam/picture-bucket/main/vs-code/upload/imgs/Screenshot_20211228-223111.jpg)
+![Screenshot_20211228-223103](https://raw.githubusercontent.com/petterobam/picture-bucket/main/vs-code/upload/imgs/Screenshot_20211228-223103.jpg)
+![Screenshot_20201228-214832](https://raw.githubusercontent.com/petterobam/picture-bucket/main/vs-code/upload/imgs/Screenshot_20201228-214832.jpg)
+![Screenshot_20201228-214847](https://raw.githubusercontent.com/petterobam/picture-bucket/main/vs-code/upload/imgs/Screenshot_20201228-214847.jpg)
+![Screenshot_20201228-214853](https://raw.githubusercontent.com/petterobam/picture-bucket/main/vs-code/upload/imgs/Screenshot_20201228-214853.jpg)
+![Screenshot_20201228-214900](https://raw.githubusercontent.com/petterobam/picture-bucket/main/vs-code/upload/imgs/Screenshot_20201228-214900.jpg)
+![Screenshot_20211228-223451](https://raw.githubusercontent.com/petterobam/picture-bucket/main/vs-code/upload/imgs/Screenshot_20211228-223451.jpg)
+![Screenshot_20211228-223143](https://raw.githubusercontent.com/petterobam/picture-bucket/main/vs-code/upload/imgs/Screenshot_20211228-223143.jpg)
