--- a/_posts/life/2020/2020-07-01-life.md
+++ b/_posts/life/2020/2020-07-01-life.md
@@ -4,4 +4,4 @@ title: 【新工作】Netease, I'm comming!
 categories: [生活]
 ---
 
-![mmexport1607613952871](https://raw.githubusercontent.com/petterobam/picture-bucket/main/vs-code/upload/imgs/mmexport1607613952871.jpg)
+![mmexport1607613952871](https://cdn.jsdelivr.net/gh/petterobam/picture-bucket@main/vs-code/upload/imgs/mmexport1607613952871.jpg)
