--- a/_posts/life/2020/2020-11-29-life.md
+++ b/_posts/life/2020/2020-11-29-life.md
@@ -6,4 +6,4 @@ categories: [生活]
 
 最近研究的内容，卡...
 
-![IMG_20201129_105002](https://raw.githubusercontent.com/petterobam/picture-bucket/main/vs-code/upload/imgs/IMG_20201129_105002.jpg)
+![IMG_20201129_105002](https://cdn.jsdelivr.net/gh/petterobam/picture-bucket@main/vs-code/upload/imgs/IMG_20201129_105002.jpg)
