--- a/_posts/life/2020/2020-12-31-life.md
+++ b/_posts/life/2020/2020-12-31-life.md
@@ -6,8 +6,8 @@ categories: [生活]
 
 【午】吃！宝哥加肉后人均AA瞬间Double!! T_T 
 
-![mmexport1609392615502](https://raw.githubusercontent.com/petterobam/picture-bucket/main/vs-code/upload/imgs/mmexport1609392615502.jpg)
-![mmexport1609394612516](https://raw.githubusercontent.com/petterobam/picture-bucket/main/vs-code/upload/imgs/mmexport1609394612516.jpg)
+![mmexport1609392615502](https://cdn.jsdelivr.net/gh/petterobam/picture-bucket@main/vs-code/upload/imgs/mmexport1609392615502.jpg)
+![mmexport1609394612516](https://cdn.jsdelivr.net/gh/petterobam/picture-bucket@main/vs-code/upload/imgs/mmexport1609394612516.jpg)
 
 ---
 
