--- a/_posts/life/2020/2020-11-17-life.md
+++ b/_posts/life/2020/2020-11-17-life.md
@@ -4,11 +4,11 @@ title: "【房东的猫】来访，签名鼠标垫Get~"
 categories: [生活]
 ---
 
-![IMG_20201117_160200](https://raw.githubusercontent.com/petterobam/picture-bucket/main/vs-code/upload/imgs/IMG_20201117_160200.jpg)
-![IMG_20201117_175042](https://raw.githubusercontent.com/petterobam/picture-bucket/main/vs-code/upload/imgs/IMG_20201117_175042.jpg)
+![IMG_20201117_160200](https://cdn.jsdelivr.net/gh/petterobam/picture-bucket@main/vs-code/upload/imgs/IMG_20201117_160200.jpg)
+![IMG_20201117_175042](https://cdn.jsdelivr.net/gh/petterobam/picture-bucket@main/vs-code/upload/imgs/IMG_20201117_175042.jpg)
 
 ---
 
 【晚】蛋壳不讲武德，房东以势压人
 
-![IMG_20201117_213020](https://raw.githubusercontent.com/petterobam/picture-bucket/main/vs-code/upload/imgs/IMG_20201117_213020.jpg)
+![IMG_20201117_213020](https://cdn.jsdelivr.net/gh/petterobam/picture-bucket@main/vs-code/upload/imgs/IMG_20201117_213020.jpg)
