--- a/_life_posts/2021/2021-01-22-life.md
+++ b/_life_posts/2021/2021-01-22-life.md
@@ -2,4 +2,4 @@
 title: "烤肠配鸡蛋液，不容易烤焦~"
 ---
 
-![IMG_20210122_224937](https://raw.githubusercontent.com/petterobam/picture-bucket/main/vs-code/upload/imgs/IMG_20210122_224937.jpg)
+![IMG_20210122_224937](https://cdn.jsdelivr.net/gh/petterobam/picture-bucket@main/vs-code/upload/imgs/IMG_20210122_224937.jpg)
