--- a/_life_posts/2021/2021-03-07-life.md
+++ b/_life_posts/2021/2021-03-07-life.md
@@ -10,6 +10,8 @@ title: "做一道不会翻车的食物 & 《超脱》电影"
 应该可以吃了？…… 关火
 ```
 
+![IMG_20210307_131520](https://cdn.jsdelivr.net/gh/petterobam/picture-bucket@main/vs-code/upload/imgs/IMG_20210307_131520.jpg)
+
 ```
 《超脱》这部电影，讲的是美国边缘教育的问题和思考。我是不推荐给朋友看的。
 不过里面有一段剧情可以引起我们思考：
