--- a/_life_posts/2021/Q2/2021-04-18-life.md
+++ b/_life_posts/2021/Q2/2021-04-18-life.md
@@ -4,6 +4,8 @@ title: "忍不住又做了一次炸鸡，这次用的是鸡里脊"
 
 ![IMG_20210418_113635](https://cdn.jsdelivr.net/gh/petterobam/picture-bucket@main/vs-code/upload/imgs/IMG_20210418_113635.jpg)
 ![IMG_20210418_114141](https://cdn.jsdelivr.net/gh/petterobam/picture-bucket@main/vs-code/upload/imgs/IMG_20210418_114141.jpg)
+![IMG_20210418_202613](https://cdn.jsdelivr.net/gh/petterobam/picture-bucket@main/vs-code/upload/imgs/IMG_20210418_202613.jpg)
+
 
 ```
 《超级工程3：纵横中国》是真的下饭~
